[package]
name = "lib-boringtun-unikraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
boringtun = "0.6.0"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-icmp",
    "medium-ip",
    "medium-ethernet",
] }
